--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -883,10 +883,10 @@ display: flex;
   display: flex;
   flex-direction: column;
   position: absolute;
-  overflow-y: hidden;
+  overflow: hidden;
  
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 .grad-show{
@@ -909,7 +909,7 @@ display: flex;
   position: absolute;
   overflow-y: hidden;
   z-index: 2;
-  width: 100%;
+  width: 110%;
   height: 100%;
   background: -webkit-linear-gradient(180deg, rgb(0, 0, 0, 0),  rgb(0, 0, 0, 0));
 }
@@ -917,7 +917,7 @@ display: flex;
   position: absolute;
   overflow-y: hidden;
   z-index: 1;
-  width: 100%;
+  width: 110%;
   height: 100%;
   background: -webkit-linear-gradient(90deg,  rgb(0, 0, 0, 1), rgb(0, 0, 0, 1));
 }
@@ -1004,7 +1004,7 @@ display: flex;
 }
 @media screen and (min-width: 0px) and (max-width:950px) {
   nav{
-    width: 100%;
+    width: 100vw;
     background-color: black;
     height: 5rem;
     position: fixed;
@@ -1218,30 +1218,7 @@ display: flex;
 .about-header-text{
   z-index: 3;
 }
-.about-con{
 
-  
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  overflow-y: hidden;
- 
-  width: 100%;
-  height: 100%;
-}
-
-.grad-show{
-  
-    opacity: .5;
-    transition: 2s .5s;
-}
-.grad-hide{
-   
-    opacity: 1;
-    transition: 1s;
-} 
 .about-title {
  
   font-size: 2.3rem;
@@ -1585,7 +1562,7 @@ display: flex;
 }
 @media screen and (min-width: 0px) and (max-width:670px) {
   nav{
-    width: 100%;
+    width: 110%;
     background-color: black;
     height: 5rem;
     position: relative;
@@ -1605,7 +1582,7 @@ display: flex;
 
   .nav-link{
     float: right;
-    width: 10%;
+    width: 20%;
     height: 100%;
    
     justify-content: center;
@@ -1647,52 +1624,9 @@ display: flex;
   font-size: 1rem;
 }
 
-.about-con{
 
-  
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  overflow-y: hidden;
- 
-  width: 100%;
-  height: 100%;
-}
 
-.grad-show{
-  
-    opacity: .5;
-    transition: 2s .5s;
-}
-.grad-hide{
-   
-    opacity: 1;
-    transition: 1s;
-} 
-.about-title {
- 
-  font-size: 2.3rem;
-  letter-spacing: 2rem;
 
-} 
-.grad-top{
-  position: absolute;
-  overflow-y: hidden;
-  z-index: 2;
-  width: 100%;
-  height: 100%;
-  background: -webkit-linear-gradient(180deg, rgb(0, 0, 0, 0),  rgb(0, 0, 0, 0));
-}
-.grad{
-  position: absolute;
-  overflow-y: hidden;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  background: -webkit-linear-gradient(90deg,  rgb(0, 0, 0, 1), rgb(0, 0, 0, 1));
-}
 .about-title h1{
   background: -webkit-linear-gradient(90deg, rgb(255, 255, 255), rgba(255, 255, 255));
   background-clip: text;
@@ -1874,7 +1808,7 @@ display: flex;
 @media screen and (min-width: 0px) and (max-width:550px) { 
   .nav-link{
     float: right;
-    width: 10%;
+    width: 20%;
     height: 100%;
    
     justify-content: center;
