--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1434,7 +1434,7 @@ display: flex;
 
 .nav-link{
   float: right;
-  width: 70%;
+  width: 40%;
   height: 100%;
   z-index: 3;
   justify-content: center;
@@ -1502,6 +1502,16 @@ display: flex;
   opacity: 0;
 }
 @media screen and (min-width: 0px) and (max-width: 780px) {
+  .nav-link{
+    float: right;
+    width: 50%;
+    height: 100%;
+    z-index: 3;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-right: 1rem;
+  }
   /*---------contect-------------------------------------------------------------------------------------------*/
 
   .form{
@@ -1571,7 +1581,7 @@ display: flex;
   }
   .links-con{
     width: 100vw;
-    height: 20vh;
+    height: 40vh;
     background-color: black;
     color: bisque;
     justify-content: center;
@@ -1583,7 +1593,7 @@ display: flex;
 
   .nav-link{
     float: right;
-    width: 40%;
+    width: 20%;
     height: 100%;
    
     justify-content: center;
@@ -1809,7 +1819,7 @@ display: flex;
 @media screen and (min-width: 0px) and (max-width:550px) { 
   .nav-link{
     float: right;
-    width: 40%;
+    width: 30%;
     height: 100%;
    
     justify-content: center;
@@ -2078,11 +2088,20 @@ display: flex;
   transition: .3s;
 } 
 }
+@keyframes s {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(-30px) rotate(90deg); }
+  40% {
+    -webkit-transform: translateY(-20px) rotate(90deg); }
+  60% {
+    -webkit-transform: translateY(-15px) rotate(90deg); } 
+}
 .sc h1{
   font-size: 1.2rem;
   margin-right: 2rem;
   float: right;
   transform: translateY(-30px) rotate(90deg);
+  animation: s 3s 2s infinite;
 }
 .sc h1 i{
   transform: rotate(270deg);
