--- a/react-app/src/comp/UI.css
+++ b/react-app/src/comp/UI.css
@@ -18,8 +18,8 @@
     flex-direction: column;
 }
 .project-con-ui {
-    width: 90%;
-    height: 70vh;
+    width: 50%;
+    height: 60vh;
     background-color: blanchedalmond;
     border-radius: 10px;
 }
@@ -32,7 +32,12 @@
     flex-direction: column;
    
 }
+.img-div-ui a {
+    z-index: 1;
+    position: absolute;
+}
 .image-banner-ui {
+    position: relative;
     width: 100%;
     height: 100%;
     justify-content: center;
@@ -43,4 +48,5 @@
     background-position: center;
     background-size: cover;
     border-radius: 10px;
+    
 }
