--- a/react-app/src/comp/UIphoto.css
+++ b/react-app/src/comp/UIphoto.css
@@ -1,7 +1,8 @@
 .photoUi-con {
     width: 100vw;
 }
-.intro-text {
+.title-div {
+    padding-top: 3rem;
     height: 40vh;
     justify-content: center;
     align-items: center;
@@ -70,6 +71,38 @@
     background-color: rgb(248, 248, 248);
     
 }
+.text-des-5 {
+    width: 40%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+}
+.underl {
+    width: 20%;
+    margin-top: .2rem;
+    height: 2px;
+    background-color: rgb(65, 65, 65);
+}
+.tex {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.text-des-5 p {
+    padding: 1rem;
+    font-size: .7rem;
+    letter-spacing: 2px;
+}
+.text-des-5 h1 {
+    padding: 1rem;
+    letter-spacing: 2px;
+    font-size: 2rem;
+    color: rgb(65, 65, 65);
+}
 .image-banner-ui-5 {
    
 
@@ -92,7 +125,7 @@
     
     border-radius: 10px;
     position: relative;
-    width: 49%;
+    width: 40%;
     height: 100%;
     justify-content: center;
     align-items: center;
@@ -206,12 +239,12 @@
     }
     .image-banner-ui-4 {
    
-
+   
         background-color: transparent;
         border-radius: 10px;
         position: relative;
-        width: 60%;
-        height: 80%;
+        width: 40%;
+        height: 50%;
       
         background-size: contain;
         border-radius: 10px;
@@ -219,7 +252,7 @@
     /*------------------------------------*/
     .img-gal-img-3 {
         width: 100%;
-        height: 150vh;
+        height: 170vh;
         
         
     }
@@ -720,6 +753,36 @@
     
 }
 @media screen and (min-width: 0px) and (max-width:680px) {
+    .text-des-5 {
+        width: 70%;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
+    }
+    .underl {
+        width: 20%;
+        margin-top: .2rem;
+        height: 2px;
+     
+    }
+    .tex {
+        width: 100%;
+        
+    }
+    .text-des-5 p {
+        padding: 1rem;
+        font-size: .7rem;
+        letter-spacing: 2px;
+    }
+    .text-des-5 h1 {
+        padding: 1rem;
+        letter-spacing: 2px;
+        font-size: 2rem;
+        color: rgb(65, 65, 65);
+    }
+    /*---------------------------------------*/
     .img-gal-img-5 {
         width: 100%;
         height: 40vh;
@@ -1047,6 +1110,22 @@
     
 }
 @media screen and (min-width: 0px) and (max-width:600px) {
+    .img-gal-img-5 {
+        width: 100%;
+        height: 60vh;
+       padding-top: 2rem;
+        
+    }
+    .image-banner-ui-5 {
+       
+    
+        background-color: transparent;
+        border-radius: 10px;
+        position: relative;
+        width: 98%;
+        height: 80%;
+       
+    }
     .img-gal-img-3 {
         width: 100%;
         height: 200vh;
