--- a/react-app/src/comp/UI.css
+++ b/react-app/src/comp/UI.css
@@ -18,35 +18,28 @@
     flex-direction: column;
 }
 .project-con-ui {
-    width: 50%;
-    height: 60vh;
-    background-color: blanchedalmond;
-    border-radius: 10px;
+ 
 }
 .img-div-ui {
+ 
+    
+}
+.grad-ui {
+    background-color: black;
     width: 100%;
     height: 100%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-   
+    
+    z-index: 1;
+    opacity: .5;
+    border-radius: 10px;
 }
 .img-div-ui a {
-    z-index: 1;
-    position: absolute;
+   
 }
 .image-banner-ui {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    border-radius: 10px;
+
     
+}
+.ui-grd-con {
+   
 }
