--- a/react-app/src/comp/UIphoto.css
+++ b/react-app/src/comp/UIphoto.css
@@ -91,6 +91,30 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    
+}
+.tex-1 {
+    
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(248, 248, 248);
+}
+.text-des-link h1{
+    font-size: 1rem;
+    font-style: italic;
+    padding: 1rem;
+}
+.text-des-link h1 a{
+   text-decoration: none;
+   color: black;
+}
+.text-des-link {
+    background-color: rgb(248, 248, 248);
 }
 .text-des-5 p {
     padding: 1rem;
@@ -199,7 +223,7 @@
     align-items: center;
     display: flex;
     background-color: #505050;
-   
+    box-shadow: 0px 2px 10px rgb(43, 43, 43);
     
 }
 .te-con {
