--- a/react-app/src/comp/weatherUi.css
+++ b/react-app/src/comp/weatherUi.css
@@ -1,12 +1,84 @@
 .weatherUi-con {
     width: 100%;
-    background-color: cadetblue;
+    
 }
 .weat {
     width: 100%;
-    background-color: burlywood;
+    height: 100vh;
+  
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 .weath-text {
+    width: 60%;
+    height: 100%;
+    
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.img-weath-con {
+    width: 40%;
+    height: 100%;
+    background-color: rgb(240, 240, 240);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.img-weath {
+    width: 70%;
+    height: 80%;
+    
+    padding: .5rem;
+}
+.image-banner-proj-weat {
+    margin-top: 2rem;
+    background-color: transparent;
+    border-radius: 10px;
+    position: relative;
     width: 100%;
-    background-color: brown;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    border-radius: 10px;
+    margin-right: 1rem;
+}
+@media screen and (min-width: 0px) and (max-width:800px) {
+    .weat {
+        width: 100%;
+        height: 100vh;
+      
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+    .img-weath-con {
+        width: 100%;
+        height: 100%;
+        background-color: rgb(240, 240, 240);
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+    .img-weath {
+        width: 100%;
+        height: 90%;
+        
+        padding: .5rem;
+    }
+    .weath-text {
+        width: 80%;
+        height: 100%;
+       
+    }
 }
