--- a/react-app/src/comp/UI.css
+++ b/react-app/src/comp/UI.css
@@ -44,7 +44,8 @@
   display: grid;
   grid-gap: 2rem;
   grid-template-columns: 45% 45%;
-  grid-template-rows: 70vh 70vh;
+ 
+  grid-auto-rows: minmax(70vh, auto);
 }
 .gra {
     width: 100%;
